Botão voltar redirecionado para BaseUri

--- a/Imc/Pages/History.razor
+++ b/Imc/Pages/History.razor
@@ -89,7 +89,7 @@
 
     private void BackCalculo()
     {
-        _navigationManager.NavigateTo("/");
+        _navigationManager.NavigateTo(_navigationManager.BaseUri);
     }
 
 }
