Valor do metro anda a cada 0.1

--- a/Imc/Components/MyInputValues.razor
+++ b/Imc/Components/MyInputValues.razor
@@ -1,5 +1,5 @@
 <div>
-    <InputNumber class="input-text" type="text" placeholder="@PlaceHolder"  @bind-Value="@Value"/>
+    <InputNumber class="input-text" type="text" placeholder="@PlaceHolder"  @bind-Value="@Value" step="0.1" TValue="double?"/>
 </div>
 
 @code {
